--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
 
-body {
+/* body {
     background-color: theme("colors.gray.50");
     color: theme("colors.gray.800");
+} */
+
+body {
+    @apply text-gray-800;
+    background: linear-gradient(to bottom right, #f9fafb, #e5e7eb);
 }
